--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,6 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="/public/stylesheets/style.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+
+
+  <title>Weigh to Go!</title>
+</head>
+
+<body>
 <section id="add" class="container-fluid">
-
-
     <div class="row" id="dashboardNav">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand">Weigh to Go</a>
@@ -13,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link disabled" href="./members">Dashboard<span
+                        <a class="nav-link disabled" href="./dashboard">Dashboard<span
                                 class="sr-only">(current)</span></a>
                     </li>
 
@@ -31,22 +45,21 @@
             </div>
         </nav>
     </div>
+</section>
     <section id="add" class="container-fluid">
         <div class="row" id="row-1"></div>
         <div class="row" id="row-2">
             <div class="col-md-3" id="col1Dashboard"></div>
             <div class="col-md-6" id="col2Dashboard">
                 <div class="form-wrap">
-                    <h1>Welcome <span class="member-name"></span></h1>
+                    <h1>Welcome <span class="username"></span></h1>
                     <br></br>
                     <div class="input-group">
-                        <label for="current_weight_2">Your Current Weight is: </label>
-                        <input type="number" name="current_weight_2" id="current_weight_2" class="input-box"
-                            placeholder="For example: 150" value={{current_weight_2}}>
+                    <h2>Your current weight is <span class="current_weight"></span></h1>
                     </div>
                     <br></br>
                     <br></br>
-                    <div class="input-group">
+            <!--        <div class="input-group">
                         <label for="weightEntry">Would you like to update your weight today?</label>
                         <input type="radio" id="yes" name="yes_or_no" value="yes">
                         <label for="yes">yes</label><br>
@@ -57,23 +70,20 @@
                     <div class="input-group">
                         <label for="age">New current weight: </label>
                         <input type="number" name="newWeight" id="newWeight" class="input-box"
-                            placeholder="new current weight here" value={{newWeight}}>
+                            placeholder="new current weight here">
                     </div>
+                -->
                     <br></br>
-                    <label for="goal_weight">Your goal weight is: </label>
-                    <input type="number" name="goal_weight" id="goal_weight" class="input-box"
-                        placeholder="For example: 150" value={{goal_weight}}>
+                    <h2>Your goal weight is  <span class="goal_weight"></span></h1>
                     <br></br>
-                    <label for="goal_difference">You are (insert pounds here) away from your goal!</label>
-                    <input type="number" name="goal_difference" id="goal_difference" class="input-box"
-                        placeholder="For example: 150" value={{"goal_difference"}}>
+                    <h2 for="goal_difference">You are <span class="goal_difference"></span>away from your goal!</label>
+                    
                 </div>
             </div>
         </div>
         <div class="row" id="row-3"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
-
-
-        </body>
+  <script type="text/javascript" src="js/dashboard.js"></script>
     </section>
+ </body>
+       
