--- a/public/signup.html
+++ b/public/signup.html
@@ -10,16 +10,10 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h1>Weight to Go! Sign Up Form</h1>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
