cleaning up api routes, html routes and js files

--- a/public/login.html
+++ b/public/login.html
@@ -12,14 +12,15 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header"></div>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-<<<<<<< HEAD
           <h2>Login Here</h2>
-=======
-          <h2>Weigh to Go Login Form</h2>
->>>>>>> 1fce4f3abc3f69a8167dc949902ba94439d653d5
           <form class="login">
             <div class="form-group">
               <label for="inputEmail1">Email address</label>
