enabled functionality of calorie_counter by displaying user input and calorie total

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -46,19 +46,19 @@
         </nav>
     </div>
 </section>
-<section id="add" class="container-fluid">
-    <div class="row" id="row-1"></div>
-    <div class="row" id="row-2">
-        <div class="col-md-3" id="col1Dashboard"></div>
-        <div class="col-md-6" id="col2Dashboard">
-            <div class="form-wrap">
-                <h1>Welcome <span class="username"></span></h1>
-                <br></br>
-                <div class="input-group">
+    <section id="add" class="container-fluid">
+        <div class="row" id="row-1"></div>
+        <div class="row" id="row-2">
+            <div class="col-md-3" id="col1Dashboard"></div>
+            <div class="col-md-6" id="col2Dashboard">
+                <div class="form-wrap">
+                    <h1>Welcome <span class="member-name"></span></h1>
+                    <br></br>
+                    <div class="input-group">
                     <h2>Your current weight is <span class="current_weight"></span></h1>
-                </div>
-                <br></br>
-                <br></br>
+                    </div>
+                    <br></br>
+                    <br></br>
 
             <!--        <div class="input-group">
                         <label for="weightEntry">Would you like to update your weight today?</label>
@@ -74,16 +74,17 @@
                             placeholder="new current weight here">
                     </div>
                 -->
-                <br></br>
-                <h2>Your goal weight is  <span class="goal_weight"></span></h1>
-                <br></br>
-                <h2 for="goal_difference">You are <span class="goal_difference"></span>away from your goal!</label>
+                    <br></br>
+                    <h2>Your goal weight is  <span class="goal_weight"></span></h1>
+                    <br></br>
+                    <h2 for="goal_difference">You are <span class="goal_difference"></span>away from your goal!</label>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row" id="row-3"></div>
-</section>
+        <div class="row" id="row-3"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/dashboard.js"></script>
+    </section>
+
  </body>
 
