--- a/public/login.html
+++ b/public/login.html
@@ -12,15 +12,10 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header"></div>
-      </div>
-    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h2>Login Here</h2>
+          <h2>Weigh to Go Login Form</h2>
           <form class="login">
             <div class="form-group">
               <label for="inputEmail1">Email address</label>
