--- a/public/signup.html
+++ b/public/signup.html
@@ -10,19 +10,12 @@
     />
     <link href="stylesheets/style.css" rel="stylesheet" />
   </head>
-
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header"></div>
-      </div>
-    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-
-          <form class = "signup">
-            <h2>Create an Account</h2>
+          <h2>Create an Account</h2>
+          <form class="signup">
             <div class="form-group">
               <label for="inputEmail1">Email address</label>
               <input
@@ -58,7 +51,7 @@
               This informtion will be used to calculate how to help you
               accomplish your weight loss goals!
             </p>
-            <div class="form-group">
+            <div>
               <label for="username">Create Your Username</label>
               <input
                 type="text"
@@ -68,7 +61,7 @@
                 placeholder="Username"
               />
             </div>
-            <div class="form-group">
+            <div class="input-group">
               <label for="age">Your Age</label>
               <input
                 type="number"
@@ -78,7 +71,7 @@
                 placeholder="Your age HERE"
               />
             </div>
-            <div class="form-group">
+            <div class="input-group">
               <label for="gender">Your Gender</label>
               <input
                 type="radio"
@@ -97,7 +90,7 @@
               />
               <label for="female">Female</label><br />
             </div>
-            <div class="form-group">
+            <div class="input-group">
               <label for="height_in_inches">Your Height in Inches</label>
               <input
                 type="number"
@@ -107,7 +100,7 @@
                 placeholder="For example: 5'6 = 60"
               />
             </div>
-            <div class="form-group">
+            <div class="input-group">
               <label for="current_weight">Your Current Weight in Pounds</label>
               <input
                 type="number"
@@ -117,7 +110,7 @@
                 placeholder="For example: 150"
               />
             </div>
-            <div class="form-group">
+            <div class="input-group">
               <label for="goal_weight">Your Goal Weight in Pounds</label>
               <input
                 type="number"
@@ -127,8 +120,8 @@
                 placeholder="For example: 120"
               />
             </div>
-            <p>Once you create your account you will be redirected to login with your email and password.</p>
-            <button type="submit" class="btn btn-default">SIGN UP</button>
+
+            <button type="submit" class="btn btn-default">Sign Up</button>
           </form>
           <br />
           <p>Already have an account? Login <a href="/login">HERE</a></p>
@@ -139,5 +132,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/signup.js"></script>
   </body>
-  
 </html>
